fix(accordion): fix display issue on IE 11 - INNO-1381

--- a/src/systems/eu/implementations/vanilla/packages/eu-component-accordion/eu-component-accordion.scss
+++ b/src/systems/eu/implementations/vanilla/packages/eu-component-accordion/eu-component-accordion.scss
@@ -22,6 +22,7 @@
 
   .ecl-accordion__toggle {
     color: $toggle-color;
+    display: block;
     font: $ecl-font-prolonged-l;
     font-weight: bold;
     padding: $ecl-spacing-xs 0;
